# osint-chain

./: .gitignore  ADDING_DATA.md  OPENROUTER_GUIDE.md  QUICKSTART.md  README.md  TESTING_COMPLETE.md  pyproject.toml  requirements.txt  setup_python311.sh  test_chat.py  test_country_query.py  test_multi_source_citation.py
data/datasets/: countries.csv  country_details.json
data/datasets/geoepr/: GeoEPR-2021.dbf  GeoEPR-2021.fix  GeoEPR-2021.shx
docs/: CITATION_SYSTEM_SUMMARY.md  ENHANCED_METADATA.md  MULTI_SOURCE_CITATION.md
scripts/: PMESII_USAGE.md  check_vector_store.py  fetch_all_un_data.py  fetch_migration_data.py  fetch_un_data.py  fetch_wikipedia_data.py  fetch_worldbank_data.py  ingest_epr.py  ingest_epr_data.py  ingest_factbook_chunked.py  ingest_factbook_json.py  ingest_from_url.py  ingest_global_leaders.py  ingest_wikipedia.py  list_indicators.py  pmesii_analysis.py  preview_enhanced_metadata.py  rebuild_vector_store.py  setup_geoepr.py  test_cisi.py  test_decision_support.py
src/: config.py  ingest_data.py
src/analysis/: __init__.py  cisi_analyzer.py
src/api/: server.py
src/dashboard/: app.py
src/data_ingestion/: __init__.py  epr_scraper.py  geoepr_scraper.py  loader.py  processor.py  un_data_fetcher.py  un_scraper.py  vector_store.py  wikipedia_scraper.py  worldbank_fetcher.py
src/langchain_engine/: __init__.py  chains.py  enhanced_query_engine.py  query_engine.py
src/tools/: cisi_tool.py  decision_support.py  generic_map_tool.py  geoepr_tool.py  map_registry.py  migration_tool.py
src/visualization/: geoepr_maps.py
(+218 files in other folders)
